--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "unlink-sequence": "yarn unlink 0xsequence @0xsequence/abi @0xsequence/api @0xsequence/auth @0xsequence/config @0xsequence/guard @0xsequence/multicall @0xsequence/network @0xsequence/provider @0xsequence/relayer @0xsequence/transactions @0xsequence/utils @0xsequence/wallet"
   },
   "dependencies": {
-    "0xsequence": "^0.40.6",
-    "0xsequence/rainbowkit-plugin": "1.0.0",
+    "0xsequence": "^0.42.8",
+    "@0xsequence/rainbowkit-plugin": "1.0.0",
     "@0xsequence/ethauth": "0.7.0",
     "@radix-ui/colors": "^0.1.8",
     "@rainbow-me/rainbowkit": "^0.7.1",
