--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "dependencies": {
     "0xsequence": "^0.43.0",
-    "@0xsequence/rainbowkit-plugin": "1.0.3",
     "@0xsequence/ethauth": "0.7.0",
+    "@0xsequence/rainbowkit-plugin": "^1.0.4",
     "@radix-ui/colors": "^0.1.8",
-    "@rainbow-me/rainbowkit": "^0.7.1",
+    "@rainbow-me/rainbowkit": "^0.8.1",
     "@stitches/react": "^1.2.6",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -27,6 +27,7 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@wagmi/chains": "^0.1.14",
     "ethers": "^5.7.2",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "react": "^17.0.2",
@@ -34,7 +35,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
-    "wagmi": "^0.7.0",
+    "wagmi": "^0.9.0",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
