--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "homepage": "demo-dapp-rainbowkit",
   "scripts": {
-    "dev": "BROWSER=none yarn start",
-    "start": "PORT=4000 GENERATE_SOURCEMAP=false react-app-rewired start",
-    "build": "BUILD_PATH='./dist' react-app-rewired build",
-    "eject": "react-scripts eject",
-    "dist": "yarn build",
+    "dev": "BROWSER=none pnpm start",
+    "start": "vite",
+    "build": "BUILD_PATH='./dist' tsc && vite build",
+    "serve": "vite preview",
+    "dist": "pnpm build",
     "link-sequence": "yarn link 0xsequence @0xsequence/abi @0xsequence/api @0xsequence/auth @0xsequence/config @0xsequence/guard @0xsequence/multicall @0xsequence/network @0xsequence/provider @0xsequence/relayer @0xsequence/transactions @0xsequence/utils @0xsequence/wallet",
     "unlink-sequence": "yarn unlink 0xsequence @0xsequence/abi @0xsequence/api @0xsequence/auth @0xsequence/config @0xsequence/guard @0xsequence/multicall @0xsequence/network @0xsequence/provider @0xsequence/relayer @0xsequence/transactions @0xsequence/utils @0xsequence/wallet"
   },
@@ -28,12 +28,12 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@wagmi/chains": "^0.1.14",
+    "@vanilla-extract/css": "^1.9.3",
     "ethers": "^5.7.2",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
     "wagmi": "^0.9.0",
     "web-vitals": "^2.1.4"
@@ -55,5 +55,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vanilla-extract/vite-plugin": "^3.7.1",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.1.1",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.5"
   }
 }
