--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "unlink-sequence": "yarn unlink 0xsequence @0xsequence/abi @0xsequence/api @0xsequence/auth @0xsequence/config @0xsequence/guard @0xsequence/multicall @0xsequence/network @0xsequence/provider @0xsequence/relayer @0xsequence/transactions @0xsequence/utils @0xsequence/wallet"
   },
   "dependencies": {
-    "0xsequence": "^0.43.0",
-    "@0xsequence/ethauth": "0.7.0",
-    "@0xsequence/rainbowkit-plugin": "^1.0.4",
-    "@radix-ui/colors": "^0.1.8",
+    "0xsequence": "^0.43.12",
+    "@0xsequence/design-system": "^0.1.107",
+    "@0xsequence/ethauth": "^0.8.1",
     "@rainbow-me/rainbowkit": "^0.8.1",
-    "@stitches/react": "^1.2.6",
+    "@0xsequence/rainbowkit-plugin": "^1.0.4",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -30,7 +29,7 @@
     "@wagmi/chains": "^0.1.14",
     "@vanilla-extract/css": "^1.9.3",
     "ethers": "^5.7.2",
-    "node-polyfill-webpack-plugin": "^1.1.4",
+    "framer-motion": "^9.0.1",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
