--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "0xsequence": "^0.43.12",
     "@0xsequence/design-system": "^0.1.107",
     "@0xsequence/ethauth": "^0.8.1",
+    "@0xsequence/rainbowkit-plugin": "^1.0.6",
+    "@0xsequence/utils": "^0.43.26",
     "@rainbow-me/rainbowkit": "^0.8.1",
-    "@0xsequence/rainbowkit-plugin": "^1.0.4",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -26,8 +27,8 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@wagmi/chains": "^0.1.14",
     "@vanilla-extract/css": "^1.9.3",
+    "@wagmi/chains": "^0.1.14",
     "ethers": "^5.7.2",
     "framer-motion": "^9.0.1",
     "react": "^17.0.2",
