updated to wagmi 1.0.0

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "0xsequence": "^0.43.12",
     "@0xsequence/design-system": "^0.1.107",
     "@0xsequence/ethauth": "^0.8.1",
-    "@0xsequence/rainbowkit-plugin": "^1.0.10",
+    "@0xsequence/rainbowkit-plugin": "^1.1.0",
     "@0xsequence/utils": "^0.43.26",
-    "@rainbow-me/rainbowkit": "^0.12.12",
+    "@rainbow-me/rainbowkit": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -35,7 +35,8 @@
     "react-app-rewired": "^2.1.11",
     "react-dom": "^18.0.0",
     "typescript": "^4.5.5",
-    "wagmi": "^0.12.12",
+    "viem": "^0.3.37",
+    "wagmi": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
