--- a/package.json
+++ b/package.json
@@ -63,5 +63,9 @@
     "vite": "^4.1.1",
     "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.5"
+  },
+  "overrides": {
+    "0xsequence": "0.0.0-20230704142612",
+    "@0xsequence/utils": "0.0.0-20230704142612"
   }
 }
