Update to rainbowkit plugin 2.0.0

--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "unlink-sequence": "yarn unlink 0xsequence @0xsequence/abi @0xsequence/api @0xsequence/auth @0xsequence/config @0xsequence/guard @0xsequence/multicall @0xsequence/network @0xsequence/provider @0xsequence/relayer @0xsequence/transactions @0xsequence/utils @0xsequence/wallet"
   },
   "dependencies": {
-    "0xsequence": "0.0.0-20230704142612",
+    "0xsequence": "1.0.0",
     "@0xsequence/design-system": "^0.1.107",
     "@0xsequence/ethauth": "^0.8.1",
-    "@0xsequence/rainbowkit-plugin": "1.1.1-beta.2",
-    "@0xsequence/utils": "0.0.0-20230704142612",
-    "@rainbow-me/rainbowkit": "^1.0.2",
+    "@0xsequence/rainbowkit-plugin": "2.0.0",
+    "@0xsequence/utils": "1.0.0",
+    "@rainbow-me/rainbowkit": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -35,7 +35,7 @@
     "react-app-rewired": "^2.1.11",
     "react-dom": "^18.0.0",
     "typescript": "^4.5.5",
-    "viem": "^0.3.37",
+    "viem": "^1.2.14",
     "wagmi": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
