Use sequence js v1.1.0

--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "build": "BUILD_PATH='./dist' tsc && vite build",
     "serve": "vite preview",
     "dist": "yarn build",
+    "clear:vite:cache": "rm -rf node_modules/.vite/",
     "link-sequence": "yarn link 0xsequence @0xsequence/abi @0xsequence/api @0xsequence/auth @0xsequence/config @0xsequence/guard @0xsequence/multicall @0xsequence/network @0xsequence/provider @0xsequence/relayer @0xsequence/transactions @0xsequence/utils @0xsequence/wallet",
     "unlink-sequence": "yarn unlink 0xsequence @0xsequence/abi @0xsequence/api @0xsequence/auth @0xsequence/config @0xsequence/guard @0xsequence/multicall @0xsequence/network @0xsequence/provider @0xsequence/relayer @0xsequence/transactions @0xsequence/utils @0xsequence/wallet"
   },
   "dependencies": {
-    "0xsequence": "^1.0.4",
+    "0xsequence": "0.0.0-20230727132905",
     "@0xsequence/design-system": "^0.1.107",
     "@0xsequence/ethauth": "^0.8.1",
     "@0xsequence/rainbowkit-plugin": "^2.0.12",
