--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "0xsequence": "^1.8.3",
     "@0xsequence/design-system": "^0.1.107",
     "@0xsequence/ethauth": "^0.8.1",
-    "@0xsequence/rainbowkit-plugin": "file:../rainbowkit-plugin",
+    "@0xsequence/rainbowkit-plugin": "^2.1.7",
     "@0xsequence/utils": "^1.0.2",
     "@rainbow-me/rainbowkit": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.2",
