--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,32 +2,26 @@ name: build dapp
 
 on:
   push:
-   branches:
-    - master
+    branches:
+      - master
 
 jobs:
   build:
-   runs-on: ubuntu-latest
-   name: Build and Push
-   steps:
-    - name: git-checkout
-      uses: actions/checkout@v2
-      with:
-        lfs: true
-    
-    - name: Install dependencies
-      run: |
-        npm install -g yarn
-        yarn install
-    
-    - name: Build
-      run: yarn dist
-      
-    - name: Push
-      uses: s0/git-publish-subdir-action@develop
-      env:
-        REPO: self
-        BRANCH: build
-        FOLDER: dist
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        MESSAGE: "Build: ({sha}) {msg}"
+    name: Run build
+    runs-on: ubuntu-latest
+    needs: [install]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/install-dependencies
+
+      - name: Build
+        run: pnpm build
+
+      - name: Push
+        uses: s0/git-publish-subdir-action@develop
+        env:
+          REPO: self
+          BRANCH: build
+          FOLDER: dist
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MESSAGE: 'Build: ({sha}) {msg}'
