--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
   "scripts": {
     "dev": "BROWSER=none pnpm start",
     "start": "vite",
-    "build": "BUILD_PATH='./dist' tsc && vite build",
+    "build": "tsc && vite build",
     "serve": "vite preview",
-    "dist": "yarn build",
     "clear:vite:cache": "rm -rf node_modules/.vite/",
-    "link-sequence": "yarn link 0xsequence @0xsequence/abi @0xsequence/api @0xsequence/auth @0xsequence/config @0xsequence/guard @0xsequence/multicall @0xsequence/network @0xsequence/provider @0xsequence/relayer @0xsequence/transactions @0xsequence/utils @0xsequence/wallet",
-    "unlink-sequence": "yarn unlink 0xsequence @0xsequence/abi @0xsequence/api @0xsequence/auth @0xsequence/config @0xsequence/guard @0xsequence/multicall @0xsequence/network @0xsequence/provider @0xsequence/relayer @0xsequence/transactions @0xsequence/utils @0xsequence/wallet"
+    "link-sequence": "../sequence.js/scripts/pnpm-link.sh link",
+    "unlink-sequence": "../sequence.js/scripts/pnpm-link.sh unlink"
   },
   "dependencies": {
     "0xsequence": "^1.8.3",
@@ -40,6 +39,13 @@
     "wagmi": "^1.3.9",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@vanilla-extract/vite-plugin": "^3.7.1",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.1.1",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.5"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -57,12 +63,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@vanilla-extract/vite-plugin": "^3.7.1",
-    "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.1",
-    "vite-plugin-svgr": "^2.4.0",
-    "vite-tsconfig-paths": "^4.0.5"
   }
 }
