--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "BROWSER=none pnpm start",
     "start": "vite",
-    "build": "tsc && vite build",
+    "build": "BUILD_PATH='./dist' tsc && vite build",
     "serve": "vite preview",
     "typecheck": "tsc --noEmit",
     "clear:vite:cache": "rm -rf node_modules/.vite/",
