--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,6 @@ jobs:
         env:
           REPO: self
           BRANCH: gh-pages
-          FOLDER: public
+          FOLDER: dist
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MESSAGE: 'Deploy: ({sha}) {msg}'
